kubernetes/apps/network/external-services/template/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}-route
spec:
  hostnames:
    - ${APP}.${SECRET_DOMAIN}
  parentRefs:
    - name: ${GATEWAY:-internal}
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ${APP}-service
          port: ${PORT}
